--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 3,
 	"name": "YouTube Uninterrupted",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"author": "YouTube Uninterrupted Contributors",
 	"homepage_url": "https://github.com/LabinatorSolutions/youtube-uninterrupted",
 	"description": "Prevents YouTube from pausing videos with the 'Continue watching?' dialog, allowing uninterrupted playback of music, podcasts, and long-form content.",
@@ -46,7 +46,7 @@
 	},
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "youtube-uninterrupted@example.com",
+			"id": "youtube-uninterrupted@labinator.com",
 			"strict_min_version": "147.0",
 			"data_collection_permissions": {
 				"required": [
