--- a/manifest.json
+++ b/manifest.json
@@ -46,7 +46,7 @@
 	},
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "youtube-uninterrupted@labinator.com",
+			"id": "youtube-uninterrupted@example.com",
 			"strict_min_version": "147.0",
 			"data_collection_permissions": {
 				"required": [
